# ipcfun

./: CMakeLists.txt
etc/: cflags.cmake  packages.cmake  scanners.cmake
src/: CMakeLists.txt  ipcfun.cc  ipcfun2.cc  ipcfun3.cc  ipcfun4.cc  ipcfun5.cc  ipcfun6.cc  support.hh  tscdemo.cc
src/apps/: CMakeLists.txt  ipcfun.cc
